// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover activator render should render a wrapper component correctly 1`] = `
<div
  className="Activator"
  onClick={[Function]}
>
  <Trigger />
</div>
`;

exports[`Popover activator render should render correctly 1`] = `
<span
  className="Activator"
  onClick={[Function]}
>
  <Trigger />
</span>
`;

exports[`Popover popover render should render correctly 1`] = `
<Transition
  appear={false}
  enter={true}
  exit={true}
  in={false}
  mountOnEnter={true}
  onEnter={[Function]}
  onEntered={[Function]}
  onEntering={[Function]}
  onExit={[Function]}
  onExited={[Function]}
  onExiting={[Function]}
  timeout={
    Object {
      "enter": 0,
      "exit": 100,
    }
  }
  unmountOnExit={true}
/>
`;

exports[`Popover popover render should use correct classnames 1`] = `
<div
  className="Wrapper top left"
>
  <div
    className="Popover sectioned"
    portalId="portal"
  >
    <span
      className="Tip"
      style={
        Object {
          "right": 50,
        }
      }
    />
    <div
      className="Content"
    >
      <WindowEvent
        event="click"
        handler={[Function]}
      />
      <WindowEvent
        event="keydown"
        handler={[Function]}
      />
      Popover Content
    </div>
  </div>
</div>
`;

exports[`Popover should render overlay correctly 1`] = `
<PopoverOverlay
  open={false}
  portalId="portal"
  renderActivator={[Function]}
  renderPopover={[Function]}
/>
`;

exports[`Popover should render overlay correctly 2`] = `
<React.Fragment>
  <span
    className="Activator"
    onClick={[Function]}
  >
    <Trigger />
  </span>
  <Portal
    containerId="portal"
  >
    <div
      className="PopoverOverlay"
      style={
        Object {
          "height": undefined,
          "left": NaN,
          "top": NaN,
          "width": undefined,
        }
      }
    >
      <Popover.Content
        bottom={true}
        open={false}
        popoverRef={[Function]}
        portalId="portal"
        right={true}
        trigger={<Trigger />}
      >
        <WindowEvent
          event="click"
          handler={[Function]}
        />
        <WindowEvent
          event="keydown"
          handler={[Function]}
        />
        Popover Content
      </Popover.Content>
    </div>
  </Portal>
</React.Fragment>
`;
